welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:11: error: not found: value nbPas
  	nbPas = nbPas - 1 ;
        ^Methods:12: error: not found: value nbPas
  }while(nbPas!=0)
         ^